--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   audioplayers: ^6.5.0
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  provider: ^6.1.5
   http: ^1.4.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -51,11 +52,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/cover.webp
     - assets/db/songs.json
     - assets/db/artists.json
     - assets/db/albums.json
     - assets/db/genres.json
-  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
